# taffybarrc

./: .gitmodules  cabal.project  taffybarrc.cabal  taffybarrc.hs
src/Taffybar/Local/: Host.hs  MPRIS.hs  Pager.hs  Widgets.hs
